"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-02-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-05:
	  Object/expr/convert_expr.{h,tcc}: cast/conversion of rvalues, 
		template class, but only instantiated for pint->preal.
		No parser interface yet, just internal use so far.  
	  front-end now checks a single attribute for CHP, event-delay, 
		and annotates CHP actions accordingly.  
		Will not bother generalizing attributes in middle-end yet.
	  Object/lang/CHP.cc: now dumps delay if applicable, 
		and applies delays to override default values 
		in constructed events.  
	  sim/chpsim/Event.cc: minor bug fix: delay member assignment
	  Test suite: added test cases for CHP delay, 
		including simulation tests with tracing.  
		Can demonstrate critical path tracing (visually).  


2007-02-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-04:
	  Punted general CHP attributes for simple-hacked in support 
		for action delay (prefix-notation).  
	  Added switch CHP_ACTION_DELAYS to disable if needed.  
	  TODO: unroll-resolve delay expressions, 
		and apply during event creation, 
		test cases using per-event delay, 
		update CHP event dumps to show delay


2007-02-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-03:
	  Parser and AST revisions to allow attributes to be prepended to any
		CHP statement, intended to use for delay and assertions.
		New lexer token: '$'.  
		Updated one test case's compile-stderr (yacc-only).  
	  TODO: middle-end+ support and possibly a CHP attribute registry.
		Decide how to distinguish between compile-time (event-graph
		generation time) and run-time attributes/directives.  


2007-02-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-02: