@@ -1,7 +1,7 @@
 /**
 	\file "Object/traits/type_tag_enum.h"
 	Global enumerations pertaining to meta types.  
-	$Id: type_tag_enum.h,v 1.6 2006/11/07 06:35:29 fang Exp $
+	$Id: type_tag_enum.h,v 1.6.18.1 2007/02/25 19:54:41 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_TRAITS_TYPE_TAG_ENUM_H__
@@ -21,9 +21,12 @@ typedef	enum {
 	META_TYPE_BOOL = 4,
 	META_TYPE_INT = 5,
 	META_TYPE_ENUM = 6,
+	META_TYPES_PHYSICAL = 7,	// use as a MAX size
+	// parameter types must follow physical types
 	META_TYPE_PBOOL = 7,
 	META_TYPE_PINT = 8,
-	META_TYPE_PREAL = 9
+	META_TYPE_PREAL = 9,
+	META_TYPES_ALL = 10		// use as a MAX size
 }	meta_type_tag_enum;
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
