@@ -1,7 +1,7 @@
 /**
 	\file "sim/chpsim/Event.h"
 	Various classes of chpsim events.  
-	$Id: Event.h,v 1.3 2007/02/05 06:39:52 fang Exp $
+	$Id: Event.h,v 1.3.2.1 2007/02/25 19:54:43 fang Exp $
  */
 
 #ifndef	__HAC_SIM_CHPSIM_EVENT_H__
@@ -17,6 +17,9 @@
 #include "sim/chpsim/Dependence.h"
 #include "sim/chpsim/devel_switches.h"
 #include "Object/ref/reference_enum.h"
+#if CHPSIM_STATE_UPDATE_BIN_SETS
+#include "Object/ref/reference_set.h"
+#endif
 #include "util/macros.h"
 
 namespace HAC {
@@ -285,7 +288,13 @@ public:
 	reset_countdown(void) { countdown = predecessors; }
 
 	void
-	execute(const nonmeta_context&, vector<global_indexed_reference>&);
+	execute(const nonmeta_context&, 
+#if CHPSIM_STATE_UPDATE_BIN_SETS
+		entity::global_references_set&
+#else
+		vector<global_indexed_reference>&
+#endif
+		);
 
 	void
 	recheck(const nonmeta_context&, const event_index_type) const;
