@@ -3,6 +3,18 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-02-25	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-79-chpsim-03-06:
+	  switch: CHPSIM_STATE_UPDATE_BIN_SETS (enabled)
+		Instead of using a vector<pair<type,index> >, 
+		we now use set<index>[types] to maintain update lists.  
+		The motivation for this is linear time set operations
+		when checking against watch sets and break sets.  
+	  Added Object/ref/reference_set.{h,cc}.
+	  Amazingly, no tweaks in test suite.  
+
+
 2007-02-24	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-79-chpsim-03-05:
